# Blok-3-exploration

./: Analysis.py  Config.py  Download.py  InitialAnalysis.py  Main.py  Models.py  Preprocessing.py  Retention.py  ScoreGrowth.py  pyproject.toml  read site.py  readme.txt
Docs/: ~$erslag.docx
data/processed/: PreProccessedData.csv
data/raw/: ScrapedData.csv  ScrapedData.parquet
output/: naive bayes.pickle  random-forest.pickle
src/: Config.py  Download.py  InitialAnalysis.py  Main.py  Models.py  Preprocessing.py  Retention.py  ScoreGrowth.py
