[tool.poetry]
name = "ds3"
version = "0.1.0"
description = "test"
authors = ["tv"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
loguru = "^0.7.2"
pydantic = "^2.4.2"
requests = "^2.31.0"
parquet = "^1.3.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
pyarrow = "^14.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
